--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -56,23 +56,21 @@
     background-color: #fff;
     border: 1px solid #fff;
 }
-.footer-copyright p{
-    padding: 15px;
-}
-.footer-copyright{
+.footer-copy-right{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
     width: 100%;
+    /* background-color: pink; */
     margin-bottom: 30px;
     color: #000;
     font-size: 20px;
 }
-.footer-copyright hr{
+.footer-copy-right hr{
     width: 80%;
     border: none;
     border-radius: 10px;
-    height: 3px;
-    background: grey;
+    height: 2px;
+    background: rgb(10, 139, 10);
 }
