--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -2,7 +2,13 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    background: linear-gradient(to top,rgb(101, 245, 101),rgb(255, 255, 255));
+    box-shadow: 0px 0px 10px grey;
+}
+.hero-left{
+    flex: 1;
+}
+.hero-right{
+    flex: 1;
 }
