--- a/src/Components/Breadcrums/Breadcrums.css
+++ b/src/Components/Breadcrums/Breadcrums.css
@@ -2,3 +2,11 @@
     width: 10px;
     height: 10px;
 }
+.breadcrums{
+    text-transform: uppercase;
+    margin-top: 2rem;
+    margin-left: 2rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: rgb(37, 176, 37);
+}
