--- a/src/Components/Display/Display.css
+++ b/src/Components/Display/Display.css
@@ -11,6 +11,8 @@
     display: flex;
     align-items: center;
     width: 100%;
+    /* background-color: #567; */
+    box-sizing: border-box;
     justify-content: space-around;
 }
 .display-left{
@@ -18,20 +20,18 @@
     /* background-color: aqua; */
 }
 .display-left img{
-    width: 50vw;
-    height: 50%;
+    width: 40vw;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
     margin: 20px;
     border-radius: 30px;
 }
 .display-right{
-    display: flex;
-    flex: 1;
-    transform: translateY(-30%);
-    /* gap: 20px; */
+    margin-top: 5rem;
+    padding: 20px;
+    top: 0;
     /* background-color: pink; */
-    /* justify-content: start; */
-    /* align-items: start; */
-    flex-direction: column;
 }
 .display-right h1{
     font-size: 4rem;
@@ -74,4 +74,16 @@
     color: white;
     font-weight: 600;
     width: 40%;
+    cursor: pointer;
+}
+.display-right button:hover{
+    font-size: 2.2rem;
+    color: black;
+    text-shadow: 0px 0px 10px white;
+    background-color: rgb(8, 235, 8);
+}
+.display-right button:active{
+    background-color: red;
+    color: white;
+    transition: .2s;
 }
