--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -63,7 +63,7 @@
 
 }
 .nav-right button {
-    font-family: sundar;
+    font-family: body;
     width: 100px;
     font-size: 1.5rem;
     padding: 10px;
@@ -74,12 +74,17 @@
     background-color: rgb(8, 247, 8);
     font-size: 1.7rem;
     color: #fff;
+    border: solid rgb(18, 192, 99);
     text-shadow: 2px 2px 10px grey;
 }
 .nav-right img{
     width: 50px;
     height: 50px;
     /* padding-left: 40px; */
+}
+.nav-right img:hover{
+    width: 60px;
+    height: 60px;
 }
 .cart-count{
     width: 22px;
